# e32meshbackend

./: .gitignore  AUTH_IMPLEMENTATION_GUIDE.md  COMPLETION_CHECKLIST.md  DELIVERABLES.md  DEVICE_FIRMWARE_COMPLETE.md  FRONTEND_SUMMARY.md  HOME_BASE_COMPLETE.md  HOME_BASE_COMPLETION.md  HOME_BASE_DEPLOYMENT.md  HOME_BASE_QUICK_START.md  INTEGRATION_TESTING.md  PHASE2_COMPLETION.md  PHASE2_EXECUTIVE_SUMMARY.md  PHASE2_WHAT_WAS_BUILT.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_UPDATES.md  TECHNICAL_SUMMARY.md  TESTING_SUMMARY.md  WORKSTREAM_A_BACKEND.md  WORKSTREAM_B_PROGRESS.md  WORKSTREAM_B_STATUS.md  worker1.md
.github/: copilot-instructions.md
device_config_portal/: FIRMWARE_INTEGRATION.md  README.md  index.html
device_firmware/: CMakeLists.txt
device_firmware/esp32c6_motion/: CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  Kconfig.projbuild  QUICKSTART.md  README.md  device_config.c  display_driver.c  display_ui.c  esp_now_device.c  http_server.c  main.c  motion_sensor.c
device_firmware/esp32c6_motion/include/: device_config.h  display_driver.h  display_ui.h  esp_now_device.h  http_server.h  motion_sensor.h
esp32_sensor_frontend/: build.py  index.html
home_base_dashboard/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
home_base_firmware/: BUILD_COMPLETE.md  CMakeLists.txt  COMPLETION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md
home_base_frontend/: index.html  package.json
tests/: integration_tests.py
unraid_api/: Dockerfile  docker-compose.yml  main.py  (+5 more)
(+43 files in other folders)
